--- a/ebextensions/01_nginx.config
+++ b/ebextensions/01_nginx.config
@@ -33,8 +33,7 @@ files:
         }
       }
 
-files:
-  "/opt/elasticbeanstalk/hooks/appdeploy/post/99_restart_nginx.sh":
+  /opt/elasticbeanstalk/hooks/appdeploy/post/99_restart_nginx.sh:
     mode: "000755"
     owner: root
     group: root
